<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">StuSync</string>
    <string name="btn_manual_sync">Manual sync</string>
    <string name="btn_sign_in_google">Sign in Google</string>
    <string name="btn_sign_in_modeus">Sign in Modeus</string>
    <string name="tv_import_settings_heading">Import settings</string>
    <string name="tv_notification_settings">Notification settings</string>
    <string name="sw_on_schedule_change">On schedule change</string>
    <string name="sw_before_next_lesson">Before next lesson start</string>
    <string name="sw_should_import_teacher_full_name">Include teacher\'s Full Name</string>
    <string name="sw_should_import_lesson_type">Include lesson type</string>
    <string name="tv_last_sync_date">Last sync: %1$s</string>
    <string name="tv_last_sync_total_created">Created: %1$d</string>
    <string name="tv_last_sync_total_modified">Modified: %1$d</string>
    <string name="tv_last_sync_total_deleted">Deleted: %1$d</string>
    <string name="tv_sync_settings">Sync settings</string>
    <string name="tv_sync_frequency">Sync frequency</string>
    <string name="sw_auto_sync">Enable automatic synchronization</string>
    <string name="et_modeus_login_hint">Login</string>
    <string name="et_modeus_password_hint">Password</string>
    <string-array name="sync_frequency">
        <item>Every 12 hours</item>
        <item>Every day</item>
        <item>Every 3 days</item>
        <item>Every week</item>
    </string-array>
</resources>