<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settings"
            type="com.stusyncteam.stusync.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/active_region_padding"
        tools:context=".ui.settings.SettingsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_import_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_import_settings_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_import_settings_heading"
                android:textSize="@dimen/settings_heading_font_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="sw_teacher_name" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_teacher_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={settings.importSettings.shouldImportTeacherName}"
                android:text="@string/sw_should_import_teacher_full_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_import_settings_heading"
                tools:checked="false" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_lesson_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={settings.importSettings.shouldImportLessonType}"
                android:text="@string/sw_should_import_lesson_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_teacher_name"
                tools:checked="false" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_notifications_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            app:layout_constraintTop_toBottomOf="@+id/layout_import_settings">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_notification_settings_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_notification_settings"
                android:textSize="@dimen/settings_heading_font_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="sw_before_next_lesson_notification" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_on_schedule_change_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={settings.notificationSettings.shouldNotifyOnScheduleChanges}"
                android:text="@string/sw_on_schedule_change"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_notification_settings_heading" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_before_next_lesson_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={settings.notificationSettings.shouldNotifyBeforeNextLessonStarts}"
                android:text="@string/sw_before_next_lesson"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_on_schedule_change_notification" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_sync_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/layout_notifications_settings">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_sync_settings_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_sync_settings"
                android:textSize="@dimen/settings_heading_font_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_sync_frequency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/tv_sync_frequency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sync_settings_heading" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spn_sync_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sync_frequency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintTop_toBottomOf="@id/tv_sync_frequency_spinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>